# lambda-delta-lifecycler

./: .gitignore  Cargo.toml  README.adoc  deployment.tf
src/: main.rs
tests/: s3-delete.json
